# RustedWappalyzer

./: .gitignore  Cargo.toml  Dockerfile  README.md  main.rs  pyproject.toml  wappalyzer_cache.json
data/: favicon_hashes.json
src/: alert.rs  benchmark.rs  cache.rs  confidence.rs  http_client.rs  lib.rs  main.rs  middleware.rs  output.rs  poc.rs  python.rs  types.rs  vuln.rs  wayback.rs
src/analyzer/: mod.rs
src/analyzer/layers/: cookies.rs  csp.rs  css.rs  dns.rs  headers.rs  html.rs  meta.rs  mod.rs  probes.rs  scripts.rs
src/server/: cache.rs  handlers.rs  mod.rs
