[package]
name = "wappalyzer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A standalone Rust implementation of Wappalyzer for web technology detection"
license = "MIT"
repository = "https://github.com/yourusername/wappalyzer"
readme = "README.md"
keywords = ["wappalyzer", "web", "technology", "detection", "security"]
categories = ["web-programming", "command-line-utilities"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Regular expressions
regex = "1.0"

# URL parsing
url = "2.0"

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Concurrency utilities
once_cell = "1.0"

# Terminal output
colored = "2.0"
indicatif = "0.17"

# Async utilities
futures = "0.3"

# Parallel processing
rayon = "1.0"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[features]
default = []
python-bindings = ["pyo3"]
benchmarks = []
examples = []

# Optional Python FFI bindings
[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]
optional = true

[dependencies.pythonize]
version = "0.20"
optional = true

[[bin]]
name = "wappalyzer"
path = "src/main.rs"

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true
