[package]
name = "wappalyzer"
version = "0.1.0"
edition = "2021"
authors = ["shart123456"]
description = "A standalone Rust implementation of Wappalyzer for web technology detection"
license = "MIT"
repository = "https://github.com/shart123456/RustedWappalyzer"
readme = "README.md"
keywords = ["wappalyzer", "web", "technology", "detection", "security"]
categories = ["web-programming", "command-line-utilities"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server
actix-web = "4"

# DNS resolution
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Regular expressions
regex = "1.0"

# URL parsing
url = "2.0"
time = { version = "0.3", features = ["std"] }

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Concurrency utilities
once_cell = "1.0"
moka = { version = "0.12", features = ["future", "sync"] }

# Constant-time comparisons (timing-safe API key checks)
subtle = "2"

# Terminal output
colored = "2.0"
indicatif = "0.17"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-actix-web = "0.7"

# Async utilities
futures = "0.3"

# Parallel processing
rayon = "1.0"

# MongoDB client (VulnVault CVE enrichment)
mongodb = "3"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[features]
default = []
python = ["pyo3", "pythonize"]
python-bindings = ["python"]  # backward-compat alias
benchmarks = []
examples = []

# Optional Python FFI bindings
[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]
optional = true

[dependencies.pythonize]
version = "0.20"
optional = true

[lib]
name = "rusty_wappalyzer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wappalyzer"
path = "src/main.rs"

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true
